[metadata]
name = package_name
version = 1.0.0
description = this is a boilerplate package_name
author = C-3PO
author_email = c-3po@email.com
url = azure.devops/repo

[options]
package = find:

[options.packages.find]
exclude = 
    tests*
    docs*

[options.entry_points]
console_scripts =
    package_name_cli = phyton-boilerplate.main:main